feat: add DTO ProductRequest, add example after json tag, add request field json
