# cmd/docs/swagger.json
@@ -25,30 +25,12 @@
                     "application/json"
                 ],
                 "tags": [
-                    "products"
+                    "Get All Products"
                 ],
                 "summary": "Show an all products available",
                 "responses": {
                     "200": {
                         "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/entity.Response"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/entity.Response"
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "$ref": "#/definitions/entity.Response"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
                         "schema": {
                             "$ref": "#/definitions/entity.Response"
                         }
@@ -71,39 +53,12 @@
                 "summary": "Add new product",
                 "parameters": [
                     {
-                        "description": "Name",
-                        "name": "name",
+                        "description": "Add Product",
+                        "name": "request",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "description": "Description",
-                        "name": "description",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "description": "Quantity",
-                        "name": "qty",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "type": "integer"
-                        }
-                    },
-                    {
-                        "description": "Price",
-                        "name": "price",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "type": "integer"
+                            "$ref": "#/definitions/entity.RequestProducts"
                         }
                     }
                 ],
@@ -120,14 +75,8 @@
                             "$ref": "#/definitions/entity.Response"
                         }
                     },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "$ref": "#/definitions/entity.Response"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
+                    "401": {
+                        "description": "Unauthorized",
                         "schema": {
                             "$ref": "#/definitions/entity.Response"
                         }
@@ -145,7 +94,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "details-product"
+                    "Cek Detail Product"
                 ],
                 "summary": "Show details product",
                 "parameters": [
@@ -203,6 +152,15 @@
                         "name": "id",
                         "in": "path",
                         "required": true
+                    },
+                    {
+                        "description": "Edit Product",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/entity.RequestProducts"
+                        }
                     }
                 ],
                 "responses": {
@@ -553,6 +511,27 @@
         }
     },
     "definitions": {
+        "entity.RequestProducts": {
+            "type": "object",
+            "properties": {
+                "description": {
+                    "type": "string",
+                    "example": "Bakwan panas berlimpah sayur dengan kenikmatan gigitan cabe rawit pedas"
+                },
+                "name": {
+                    "type": "string",
+                    "example": "Bakwan"
+                },
+                "price": {
+                    "type": "integer",
+                    "example": 3000
+                },
+                "qty": {
+                    "type": "integer",
+                    "example": 100
+                }
+            }
+        },
         "entity.Response": {
             "type": "object",
             "properties": {
